--- a/api/build.gradle
+++ b/api/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     implementation "io.dropwizard:dropwizard-http2:${dropwizardVersion}"
     implementation "io.dropwizard:dropwizard-assets:${dropwizardVersion}"
     
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    
     // Jakarta EE dependencies
     implementation platform("jakarta.platform:jakarta.jakartaee-bom:${jakartaVersion}")
     implementation "jakarta.platform:jakarta.jakartaee-api:${jakartaVersion}"
@@ -45,6 +49,9 @@ dependencies {
     implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
     implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
     implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+    implementation 'org.glassfish:jakarta.el:4.0.2'
     
     // GraphQL dependencies with Jakarta EE 9 support
     implementation "com.graphql-java:graphql-java:${graphqlJavaVersion}"
@@ -52,16 +59,15 @@ dependencies {
     implementation "com.graphql-java-kickstart:graphql-java-kickstart:${graphqlServletVersion}"
     
     implementation "io.prometheus:simpleclient_servlet_jakarta:0.16.0"
-
     implementation "io.prometheus:simpleclient_common:0.16.0"
     implementation "io.prometheus:simpleclient_dropwizard:0.16.0"
     implementation "io.prometheus:simpleclient_hotspot:0.16.0"
     
-
     implementation "org.jdbi:jdbi3-core:${jdbi3Version}"
     implementation "org.jdbi:jdbi3-jackson2:${jdbi3Version}"
     implementation "org.jdbi:jdbi3-postgres:${jdbi3Version}"
     implementation "org.jdbi:jdbi3-sqlobject:${jdbi3Version}"
+    implementation "io.dropwizard.metrics:metrics-jdbi3:4.2.25"
     implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'org.dhatim:dropwizard-sentry:2.1.6'
     implementation "io.sentry:sentry:${sentryVersion}"
@@ -92,6 +98,8 @@ dependencies {
     testImplementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
     testImplementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
     testImplementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
+    testImplementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+    testImplementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
 }
 
 task testUnit(type: Test) {
