--- a/api/build.gradle
+++ b/api/build.gradle
@@ -19,7 +19,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'com.github.johnrengelman.shadow'
 }
 
 ext {
