--- a/api/marquez.dev.yml
+++ b/api/marquez.dev.yml
@@ -30,10 +30,15 @@ logging:
     org.postgresql: DEBUG
 
 search:
-  enabled: false
+  enabled: ${SEARCH_ENABLED:-true}
+  scheme: http
+  host: ${SEARCH_HOST:-opensearch}
+  port: ${SEARCH_PORT:-9200}
+  username: admin
+  password: admin
 
 tags:
   - name: PII
     description: Personally identifiable information
   - name: SENSITIVE
-    description: Contains sensitive information
+    description: Contains sensitive information 
