--- a/api/build.gradle
+++ b/api/build.gradle
@@ -28,7 +28,11 @@ ext {
     testcontainersVersion = '1.18.3'
     sentryVersion = '6.34.0'
 }
-
+configurations.all {
+    resolutionStrategy {
+        force 'com.google.guava:guava:32.1.3-jre'
+    }
+}
 dependencies {
     implementation project(':clients:java')
     implementation "io.dropwizard:dropwizard-core:${dropwizardVersion}"
@@ -54,9 +58,15 @@ dependencies {
     implementation 'org.glassfish:jakarta.el:4.0.2'
     
     // GraphQL dependencies with Jakarta EE 9 support
-    implementation "com.graphql-java:graphql-java:${graphqlJavaVersion}"
-    implementation "com.graphql-java-kickstart:graphql-java-servlet:${graphqlServletVersion}"
-    implementation "com.graphql-java-kickstart:graphql-java-kickstart:${graphqlServletVersion}"
+    implementation ("com.graphql-java:graphql-java:${graphqlJavaVersion}") {
+        exclude group: 'com.google.guava', module: 'guava'
+    }
+    implementation ("com.graphql-java-kickstart:graphql-java-servlet:${graphqlServletVersion}") {
+        exclude group: 'com.google.guava', module: 'guava'
+    }
+    implementation ("com.graphql-java-kickstart:graphql-java-kickstart:${graphqlServletVersion}") {
+        exclude group: 'com.google.guava', module: 'guava'
+    }
     
     implementation "io.prometheus:simpleclient_servlet_jakarta:0.16.0"
     implementation "io.prometheus:simpleclient_common:0.16.0"
@@ -206,12 +216,21 @@ shadowJar {
     }
     mergeServiceFiles()
     // Include all dependencies by default
+    exclude 'io/dropwizard/logback/shaded/guava/**'
+    exclude 'META-INF/maven/com.google.guava/**' // Optional: only if you want zero guava metadata
+
     dependencies {
+          exclude { dep ->
+            dep.moduleGroup == 'com.google.guava' &&
+            (dep.moduleName == 'guava' && dep.moduleVersion == '31.0.1-jre')
+        }
+        //exclude(dependency('com.google.guava:guava')) 
         // Exclude test dependencies
         exclude(dependency('org.junit:.*'))
         exclude(dependency('org.testcontainers:.*'))
         exclude(dependency('org.junit.jupiter:.*'))
         exclude(dependency('org.junit.vintage:.*'))
+        exclude(dependency('com.google.guava:guava:31.0.1-jre'))
     }
     manifest {
         attributes(
