--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,12 @@ allprojects {
         maven {
             url "https://repo.eclipse.org/content/groups/releases/"
         }
+
+        configurations.all {
+        resolutionStrategy {
+            force 'com.google.guava:guava:33.4.6-jre'
+        }
+    }
     }
 }
 
@@ -74,6 +80,12 @@ subprojects {
         graphqlServletVersion = '15.0.0'
         jakartaValidationVersion = '3.0.2'
         prometheusVersion = '0.16.0'
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'com.google.guava:guava:32.1.3-jre'
+        }
     }
 
     dependencies {
