feat: implement denormalized lineage backfill and materialized view refresh improvements
- Add MaterializedViewRefreshConfig for configurable refresh frequency
- Remove facets dependency from denormalized lineage queries for better performance
- Update DenormalizedLineageService to handle bulk population of existing runs
- Enhance LineageService integration with denormalized tables
- Improve Docker configuration and build scripts
- Add comprehensive test coverage for denormalized lineage functionality
- Update MarquezApp to use configurable materialized view refresh settings

This change improves the performance and reliability of lineage data processing
by removing unnecessary facets joins and adding proper backfill capabilities
for denormalized tables.

--- a/marquez.example.yml
+++ b/marquez.example.yml
@@ -36,6 +36,11 @@ db:
   # Maximum retention days (default: 7)
   # retentionDays: ${DB_RETENTION_DAYS:-7}
 
+# Adjusts materialized view refresh policy
+# materializedViewRefresh:
+  # Refresh materialized views at a frequency of every 'X' minutes (default: 60)
+  # frequencyMinutes: ${MATERIALIZED_VIEW_REFRESH_FREQUENCY_MINUTES:-60}
+
 # Enables flyway configuration overrides (see: https://flywaydb.org/documentation/configfiles)
 # flyway:
 #   connectRetries: 3
