--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,7 @@ subprojects {
     configurations.all {
         resolutionStrategy {
             force 'com.google.guava:guava:32.1.3-jre'
+            force 'org.eclipse.jetty.http2:http2-common:11.0.26' 
         }
     }
 
