Update Docker image tags in CircleCI config
fixing the automated build for forked repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,8 @@ jobs:
       image: ubuntu-2004:2023.10.1
     steps:
       - checkout
-      - run: docker build --no-cache --tag "marquezproject/marquez:${CIRCLE_SHA1}" .
-      - run: docker save -o marquez.tar "marquezproject/marquez:${CIRCLE_SHA1}"
+      - run: docker build --no-cache --tag "swar00pduth/marquez:${CIRCLE_SHA1}" .
+      - run: docker save -o marquez.tar "swar00pduth/marquez:${CIRCLE_SHA1}"
       - store_artifacts:
           path: marquez.tar
 
@@ -63,8 +63,8 @@ jobs:
       image: ubuntu-2004:2023.10.1
     steps:
       - *checkout_project_root
-      - run: docker build --no-cache --tag "marquezproject/marquez-web:${CIRCLE_SHA1}" .
-      - run: docker save -o marquez-web.tar "marquezproject/marquez-web:${CIRCLE_SHA1}"
+      - run: docker build --no-cache --tag "swar00pduth/marquez-web:${CIRCLE_SHA1}" .
+      - run: docker save -o marquez-web.tar "swar00pduth/marquez-web:${CIRCLE_SHA1}"
       - store_artifacts:
           path: marquez-web.tar
 
