refactor: update project references and configurations
- Change project URLs and organization name from MarquezProject to swar00pduthks in various configuration files.
- Update .gitignore to include new documentation and metadata files.
- Modify CircleCI configuration to reflect new Docker image tags.
- Update build.gradle files to change groupId and artifactId to match new project naming conventions.
- Enhance Docusaurus configuration for documentation site deployment.

These changes ensure consistency across the project and align with the new ownership structure.

--- a/clients/java/build.gradle
+++ b/clients/java/build.gradle
@@ -58,7 +58,7 @@ test {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'io.github.marquezproject'
+            groupId = 'io.github.swar00pduthks'
             artifactId = 'marquez-java'
 
             from components.java
@@ -69,7 +69,7 @@ publishing {
             pom {
                 name = 'marquez-java'
                 description = 'Java client for Marquez'
-                url = 'https://github.com/MarquezProject/marquez'
+                url = 'https://github.com/swar00pduthks/marquez'
                 licenses {
                     license {
                         name = 'The Apache License, Version 2.0'
@@ -78,14 +78,14 @@ publishing {
                 }
                 developers {
                     developer {
-                        id = 'marquezproject'
-                        name = 'Marquez Project'
+                        id = 'swar00pduthks'
+                        name = 'Swaroop Duthkuri'
                     }
                 }
                 scm {
-                    connection = 'scm:git:git://github.com/MarquezProject/marquez.git'
-                    developerConnection = 'scm:git:ssh://github.com:MarquezProject/marquez.git'
-                    url = 'https://github.com/MarquezProject/marquez'
+                    connection = 'scm:git:git://github.com/swar00pduthks/marquez.git'
+                    developerConnection = 'scm:git:ssh://github.com:swar00pduthks/marquez.git'
+                    url = 'https://github.com/swar00pduthks/marquez'
                 }
             }
         }
