Enhance Search and Job Data Management
- Updated the SearchResource class to improve job and dataset search functionality.
- Added new methods in JobDao for managing job tags, including updating and deleting tags.
- Enhanced RunDao with additional queries for retrieving runs based on dataset versions.
- Improved DatasetVersion and DatasetVersionData models to include more detailed information.
- Updated mappers to handle new fields and ensure data integrity.
- Added new files to .gitignore for better project management.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,12 @@ chart/charts/
 
 # Dev
 changes.txt
+BRANCH_COMPARISON_0.52.33_vs_dropwizard_5_upgrade.md
+CHANGES_APPLIED.md
+CURRENT_FORK_STATUS.md
+FORK_SETUP_CHECKLIST.md
+FORK_SETUP_GUIDE.md
+GITHUB_PAGES_FIX.md
+GPG_KEYSERVER_FIX.md
+GPG_SETUP_GUIDE.md
+MAVEN_CENTRAL_PUBLISHING_GUIDE.md
