--- a/clients/java/build.gradle
+++ b/clients/java/build.gradle
@@ -97,14 +97,14 @@ publishing {
         ]
     }
 
-    repositories {
+   repositories {
         maven {
-            def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-            def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+            def releasesRepoUrl = 'https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/'
+            def snapshotsRepoUrl = 'https://central.sonatype.com/repository/maven-snapshots/'
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
-                username = System.getenv('OSSRH_USERNAME')
-                password = System.getenv('OSSRH_PASSWORD')
+                 username = System.getenv('ORG_GRADLE_PROJECT_ossrhUsername') ?: System.getenv('OSSRH_USERNAME')
+                 password = System.getenv('ORG_GRADLE_PROJECT_ossrhPassword') ?: System.getenv('OSSRH_PASSWORD')
             }
         }
     }
