--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
     "eslint-fix": "eslint . --ext .ts,.tsx --ignore-pattern \"src/__tests__/*\" --fix"
   },
   "engines": {
-    "node": ">12.22.7"
+    "node": ">=14.15.0"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.9",
