fix: update Testcontainers configuration and dependencies for improved compatibility
Signed-off-by: swar00pduthks <swaroopduthks@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
 
         -   id: gradle-test
             name: Run Tests
-            entry: cmd /c gradlew.bat test
+            entry: cmd /c "gradlew.bat --stop && gradlew.bat cleanTest test"
             language: system
             pass_filenames: false
             files: \.java$
