Add lineage facet filtering and GET endpoint load testing
This commit introduces facet filtering support for lineage queries and
comprehensive load testing infrastructure for GET /lineage endpoints.

Features:
- Add includeFacets parameter to filter run facets by name
- Add aggregateToParentRun parameter to aggregate child runs to parent
- Implement SQL optimizations for facet-filtered lineage queries
- Add comprehensive GET /lineage load tests with k6

API Changes:
- New query parameters in GET /api/v1/lineage endpoint
- OpenAPI spec updated with new parameters and examples
- Backward compatible - existing queries work unchanged

Load Testing:
- CircleCI integration for automated GET endpoint testing
- k6 test script comparing performance with/without facets
- Tests both scenarios: facet filtering vs full lineage retrieval
- Integrated into existing load-test-api job to reuse infrastructure

Infrastructure:
- Fixed web/Dockerfile entrypoint for proper environment variable handling
- Added .gitignore rules for environment-specific k8s and terraform files

Testing:
- Updated LineageDaoTest and LineageServiceTest for facet filtering
- All tests passing with Spotless formatting applied

Version bump to 0.52.37

Signed-off-by: swar00pduthks <swaroopduthks@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,12 +158,16 @@ jobs:
       - run: ./.circleci/get-jdk17.sh
       - run: ./.circleci/get-k6.sh
       - run: ./.circleci/api-load-test.sh
+      - run: chmod +x .circleci/get-lineage-load-test.sh && ./.circleci/get-lineage-load-test.sh
       - store_artifacts:
           path: marquez
       - store_artifacts:
           path: k6
     environment:
       - POSTGRES_PORT=5432
+      - VUS=25
+      - DURATION=5m
+      - LINEAGE_DEPTH=20
 
   migrate-db:
     working_directory: ~/marquez
