--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -19,11 +19,7 @@ RUN npm install
 COPY . .
 
 RUN REACT_APP_ADVANCED_SEARCH=$REACT_APP_ADVANCED_SEARCH npm run build
-
-# Create entrypoint script
-RUN printf '#!/bin/sh\nset -e\nnode setupProxy.js\n' > /usr/src/app/entrypoint.sh && \
-    chmod +x /usr/src/app/entrypoint.sh
-
+COPY docker/entrypoint.sh entrypoint.sh
+RUN sed -i 's/\r$//' /usr/src/app/entrypoint.sh && chmod +x /usr/src/app/entrypoint.sh
 EXPOSE 3000
-
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
