--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
 
         -   id: gradle-test
             name: Run Tests
-            entry: cmd /c "gradlew.bat --stop && gradlew.bat cleanTest test"
+            entry: cmd /c gradlew.bat test
             language: system
             pass_filenames: false
             files: \.java$
