--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,6 @@
     "@mui/x-charts": "^7.15.0",
     "@mui/x-date-pickers": "^6.5.0",
     "@types/jest": "^29.5.2",
-    "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@uiw/react-json-view": "^2.0.0-alpha.24",
     "@visx/responsive": "3.10.2",
@@ -60,7 +59,8 @@
     "react-i18next": "^12.3.1",
     "react-inlinesvg": "^3.0.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2",
+    "react-router": "6.14.2",
+    "react-router-dom": "6.14.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1",
@@ -93,6 +93,8 @@
     "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
     "clean-webpack-plugin": "^4.0.0",
     "elkjs": "^0.8.2",
     "es6-promise": "^4.2.8",
@@ -130,13 +132,18 @@
     "@babel/runtime": "^7.26.10",
     "@babel/helpers": "^7.26.10",
     "form-data": "^4.0.4",
-    "@remix-run/router": "^1.23.2",
     "cross-spawn": "^7.0.5",
     "node-forge": "^1.3.2",
     "path-to-regexp": "^0.1.12",
     "qs": "^6.14.1",
     "rollup": "^2.79.2",
     "send": "^0.19.0",
-    "@types/d3-dispatch": "3.0.6"
+    "@types/d3-dispatch": "3.0.6",
+    "terser-webpack-plugin": "^5.3.10",
+    "schema-utils@3.3.0": {
+  "ajv": "6.12.6",
+  "ajv-keywords": "3.5.2"
+}
+
   }
 }
