--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
-org.gradle.internal.http.connectionTimeout=60000
-org.gradle.internal.http.socketTimeout=60000
-
-org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-
-version=0.52.39
+1| org.gradle.internal.http.connectionTimeout=60000
+2| org.gradle.internal.http.socketTimeout=60000
+3| 
+4| org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+5|   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+6|   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+7|   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+8|   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+9| 
+10| version=0.52.40
+11| 
