Fix CircleCI db-migration test to use correct Docker registries
- Fix seed.sh: Change marquez-api-*.jar to marquez-*.jar to match Dockerfile output
- Add MARQUEZ_REGISTRY env var to docker-compose files with default swar00pduth
- Use official marquezproject/marquez:0.51.1 for baseline migration test
- Use swar00pduth/marquez:<commit-sha> for upgrade migration test
- Fix BUILD_VERSION in up.sh to use git commit SHA instead of hardcoded 0.51.1

This allows the db-migration test to:
1. Pull official release (0.51.1) as baseline
2. Upgrade to current fork build (commit SHA) to test migrations

Signed-off-by: swar00pduthks <swaroopduthks@gmail.com>

--- a/docker-compose.seed.yml
+++ b/docker-compose.seed.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   seed_marquez:
-    image: "marquezproject/marquez:${TAG}"
+    image: "${MARQUEZ_REGISTRY:-swar00pduth}/marquez:${TAG}"
     # platform: linux/amd64
     container_name: seed-marquez-with-metadata
     environment:
