--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   web:
-    image: "marquezproject/marquez-web:${TAG}"
+    image: "${MARQUEZ_REGISTRY:-swar00pduth}/marquez-web:${TAG}"
     # platform: linux/amd64
     container_name: marquez-web
     build:
