--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   api:
-    image: "marquezproject/marquez:${TAG}"
+    image: "${MARQUEZ_REGISTRY:-swar00pduth}/marquez:${TAG}"
     # platform: linux/amd64
     container_name: marquez-api
     environment:
