Fix CircleCI load tests JAR detection and ensure version in filename
- Add archiveBaseName and archiveVersion to shadowJar config
- Use wildcard pattern to find JAR instead of parsing gradle.properties
- Fixes issue where MARQUEZ_VERSION was empty causing lookup of 'marquez-api-.jar'
- More robust against environment differences in CI

Signed-off-by: swar00pduthks <swaroopduthks@gmail.com>

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -215,6 +215,8 @@ application {
 }
 
 shadowJar {
+    archiveBaseName.set('marquez-api')
+    archiveVersion.set(project.version.toString())
     archiveClassifier.set('')
     transform(ServiceFileTransformer)
     // Add LICENSE to Jar
