Fix CircleCI load-test-api: build JAR before testing
- Add gradle shadowJar build step to load-test-api job
- CircleCI jobs run in separate containers, so JAR from build-api wasn't available
- Update load test scripts to use wildcard pattern for JAR detection
- Add archiveBaseName and archiveVersion to shadowJar config for consistent naming

Fixes: JAR file not found in api/build/libs/ error
Signed-off-by: swar00pduthks <swaroopduthks@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,7 @@ jobs:
       - run: ./.circleci/get-docker-compose.sh
       - run: ./.circleci/get-jdk17.sh
       - run: ./.circleci/get-k6.sh
+      - run: ./gradlew --no-daemon clean :api:shadowJar
       - run: ./.circleci/api-load-test.sh
       - run: chmod +x .circleci/get-lineage-load-test.sh && ./.circleci/get-lineage-load-test.sh
       - store_artifacts:
